--- a/android-app/src/main/res/layout/activity_main.xml
+++ b/android-app/src/main/res/layout/activity_main.xml
@@ -2,7 +2,10 @@
                 xmlns:tools="http://schemas.android.com/tools"
                 a:layout_width="match_parent"
                 a:layout_height="match_parent"
-                a:padding="16dp"
+                a:paddingBottom="@dimen/activity_vertical_margin"
+                a:paddingLeft="@dimen/activity_horizontal_margin"
+                a:paddingRight="@dimen/activity_horizontal_margin"
+                a:paddingTop="@dimen/activity_vertical_margin"
                 a:animateLayoutChanges="true"
                 tools:context="eu.unipv.epsilon.enigma.MainActivity">
             
