--- a/android-app/src/main/res/layout/activity_main.xml
+++ b/android-app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,30 @@
 <RelativeLayout xmlns:a="http://schemas.android.com/apk/res/android"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 xmlns:tools="http://schemas.android.com/tools"
                 a:layout_width="match_parent"
                 a:layout_height="match_parent"
-                a:paddingBottom="@dimen/activity_vertical_margin"
-                a:paddingLeft="@dimen/activity_horizontal_margin"
-                a:paddingRight="@dimen/activity_horizontal_margin"
-                a:paddingTop="@dimen/activity_vertical_margin"
                 a:animateLayoutChanges="true"
-                tools:context="eu.unipv.epsilon.enigma.MainActivity">
-            
+                tools:context=".MainActivity">
+
+    <android.support.v7.widget.Toolbar
+            a:id="@+id/toolbar"
+            a:layout_width="match_parent"
+            a:layout_height="wrap_content"
+            a:minHeight="?android:attr/actionBarSize"
+            a:background="@color/alphaColorPrimary"
+            a:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
+            a:elevation="6dp" />
+
+    <!-- Pre 5.0 elevation: FrameLayout with foreground="?android:windowContentOverlay" -->
+
+    <android.support.v7.widget.RecyclerView
+            a:id="@+id/main_recycler_view"
+            a:scrollbars="vertical"
+            a:layout_width="match_parent"
+            a:layout_height="match_parent"
+            a:paddingLeft="@dimen/card_screen_edge_padding"
+            a:paddingRight="@dimen/card_screen_edge_padding"
+            a:clipToPadding="false" />
+
 </RelativeLayout>
