--- a/android-app/src/main/res/values/ids.xml
+++ b/android-app/src/main/res/values/ids.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- Main activity modifiable Card elements -->
+    <!-- Main activity recyclable Card fields -->
     <item type="id" name="card_image"/>
     <item type="id" name="card_title"/>
+    <item type="id" name="card_subtitle"/>
     <item type="id" name="card_progressbar"/>
     <item type="id" name="card_description"/>
 
