--- a/android-app/src/main/res/layout/main_card_medium.xml
+++ b/android-app/src/main/res/layout/main_card_medium.xml
@@ -25,7 +25,7 @@
                     a:layout_height="100dp"
                     a:scaleType="centerCrop"
                     a:adjustViewBounds="true"
-                    a:src="@drawable/temp_img"
+                    a:src="@drawable/temp_img02"
                     tools:ignore="contentDescription"/>
 
             <!-- Drawable loading through XML only temporary, it is source of lag -->
@@ -38,8 +38,6 @@
                     a:layout_alignBottom="@id/card_image"
                     a:layout_margin="@dimen/card_content_padding"
                     a:textColor="#eee"
-                    a:shadowColor="#8000"
-                    a:shadowRadius="8"
                     app:font_family="RobotoSlab"
                     app:font_family_ext="Regular"
                     tools:text="Series M"/>
@@ -71,7 +69,7 @@
                     a:textSize="@dimen/body_font_size_large"
                     a:textStyle="bold"
                     a:layout_marginBottom="4dp"
-                    tools:text="Content subtitle"/>
+                    tools:text="Rabbits 4ever"/>
 
             <TextView
                     a:id="@id/card_description"
