--- a/android-app/src/main/res/layout/main_card_small.xml
+++ b/android-app/src/main/res/layout/main_card_small.xml
@@ -21,7 +21,7 @@
                 a:layout_height="fill_parent"
                 a:scaleType="centerCrop"
                 a:adjustViewBounds="true"
-                a:src="@drawable/temp_img"
+                a:src="@drawable/temp_img03"
                 tools:ignore="contentDescription"/>
 
         <!-- Drawable loading through XML only temporary, it is source of lag -->
@@ -45,8 +45,6 @@
                         a:layout_height="wrap_content"
                         a:textSize="@dimen/headline_font_size"
                         a:textColor="#eee"
-                        a:shadowColor="#8000"
-                        a:shadowRadius="8"
                         a:layout_marginBottom="4dp"
                         app:font_family="RobotoSlab"
                         app:font_family_ext="Regular"
@@ -62,7 +60,7 @@
                         a:textSize="@dimen/body_font_size_large"
                         a:textStyle="bold"
                         a:layout_marginBottom="4dp"
-                        tools:text="Content subtitle"/>
+                        tools:text="Quantum leap"/>
 
             </LinearLayout>
 
