Aggiunte schede a scorrimento sotto alla Toolbar nella schermata Quiz
Qui il link della guida che sto seguendo:
https://github.com/codepath/android_guides/wiki/Google-Play-Style-Tabs-using-SlidingTabLayout

--- a/android-app/src/main/res/layout/activity_quiz.xml
+++ b/android-app/src/main/res/layout/activity_quiz.xml
@@ -16,9 +16,16 @@
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
             a:elevation="6dp" />
 
-    <TextView
-            a:text="questa è la pagina del quiz!"
-            a:layout_width="wrap_content"
+    <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
+            a:id="@+id/sliding_tabs"
+            a:layout_width="match_parent"
             a:layout_height="wrap_content" />
+
+    <android.support.v4.view.ViewPager
+            a:id="@+id/viewpager"
+            a:layout_width="match_parent"
+            a:layout_height="0px"
+            a:layout_weight="1"
+            a:background="@android:color/white" />
 
 </LinearLayout>
