Cambiato colore e layout (altezza) delle schede a scorrimento
Fatto assieme a @lczx.

--- a/android-app/src/main/res/layout/activity_quiz.xml
+++ b/android-app/src/main/res/layout/activity_quiz.xml
@@ -19,7 +19,9 @@
     <com.google.samples.apps.iosched.ui.widget.SlidingTabLayout
             a:id="@+id/sliding_tabs"
             a:layout_width="match_parent"
-            a:layout_height="wrap_content" />
+            a:layout_height="wrap_content"
+            a:background="@color/alphaColorPrimary" />
+    <!-- TODO consider changing background color -->
 
     <android.support.v4.view.ViewPager
             a:id="@+id/viewpager"
