--- a/android-app/src/main/res/layout/activity_quiz.xml
+++ b/android-app/src/main/res/layout/activity_quiz.xml
@@ -20,7 +20,9 @@
             a:id="@+id/sliding_tabs"
             a:layout_width="match_parent"
             a:layout_height="wrap_content"
-            a:background="@color/alphaColorPrimary" />
+            a:background="@color/alphaColorPrimary"
+            a:elevation="6dp"
+            a:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
     <!-- TODO consider changing background color -->
 
     <android.support.v4.view.ViewPager
