Fixed a lot of lint warnings

--- a/android-app/src/main/res/layout-v21/activity_main.xml
+++ b/android-app/src/main/res/layout-v21/activity_main.xml
@@ -14,7 +14,7 @@
             a:background="@color/alphaColorPrimary"
             a:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/Base.ThemeOverlay.AppCompat.Light"
-            a:foreground="?android:windowContentOverlay" />
+            a:elevation="6dp" />
 
     <include layout="@layout/include_main_contentview"
              a:layout_width="match_parent"
