--- a/android-app/src/main/res/values/dimens.xml
+++ b/android-app/src/main/res/values/dimens.xml
@@ -1,18 +1,18 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <!-- unused <dimen name="activity_horizontal_margin">16dp</dimen> -->
+    <!-- unused <dimen name="activity_vertical_margin">16dp</dimen> -->
 
     <!-- Material Design -->
-    <dimen name="toolbar_default_elevation">8dp</dimen>
+    <!-- unused <dimen name="toolbar_default_elevation">8dp</dimen> -->
 
     <!-- Material Design guidelines, Cards related -->
     <dimen name="card_corner_radius">@dimen/cardview_default_radius</dimen>
     <dimen name="card_default_elevation">@dimen/cardview_default_elevation</dimen>
     <dimen name="card_content_padding">16dp</dimen>
-    <dimen name="card_screen_edge_padding">8dp</dimen>
+    <!-- unused <dimen name="card_screen_edge_padding">8dp</dimen> -->
     <dimen name="card_screen_edge_padding_half">4dp</dimen>
-    <dimen name="card_gutters_padding">8dp</dimen>
+    <!-- unused <dimen name="card_gutters_padding">8dp</dimen> -->
     <dimen name="card_gutters_padding_half">4dp</dimen>
 
     <!-- Material Design guidelines, Typography -->
