Fixes for Android platform
- Template initialization
- Assets path
- Do nothing on null image loading

--- a/common/src/main/resources/assets/templates/error/error_page.html
+++ b/common/src/main/resources/assets/templates/error/error_page.html
@@ -10,7 +10,7 @@
                 color: white;
             }
 
-            header { text-align: center; }
+            header { text-align: center; font-size: .65em; }
             h1, h2 { margin: 8pt; }
             h2 { font-style: italic; }
 
@@ -29,7 +29,7 @@
 
             .cnt pre {
                 background-color: rgba(0, 0, 0, .5);
-                font-size: 7pt;
+                font-size: 6pt;
                 flex: 1 1 auto;
                 border-radius: 5px;
                 overflow: auto;
