--- a/android-app/src/main/res/menu/menu_main.xml
+++ b/android-app/src/main/res/menu/menu_main.xml
@@ -5,13 +5,8 @@
       tools:context=".MainActivity">
 
     <item android:id="@+id/temp_button"
-          android:title="Placeholder" tools:ignore="HardcodedText"
+          android:title="Do not click!" tools:ignore="HardcodedText"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
-
-    <item android:id="@+id/filetest_button"
-          android:title="Do not click" tools:ignore="HardcodedText"
-          android:orderInCategory="101"
           app:showAsAction="never"/>
 
 </menu>
