--- a/levels/experiments/src/main/resources/assets/templates/rotating-puzzle/style.css
+++ b/levels/experiments/src/main/resources/assets/templates/rotating-puzzle/style.css
@@ -1,11 +1,13 @@
-body {
+html {
     margin: 0;
     padding: 0;
     position: absolute;
     width: 100%;
     height: 100%;
     display: table;
-    background: center/cover no-repeat fixed;
+    background: no-repeat center center fixed;
+    -webkit-background-size: cover;
+    background-size: cover;
 }
 
 #container {
