Added deprecation warnings in "grid" template code

--- a/common/src/main/resources/assets/templates/list/indexGrid.html
+++ b/common/src/main/resources/assets/templates/list/indexGrid.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html>
+
+<!--            THIS IS PART OF THE 'grid' TEMPLATE WHICH IS DEPRECATED            -->
+<!-- look at "eu.unipv.epsilon.enigma.template.builtin.GridTemplate" for more info -->
+<!--               ...and this file isn't even meant to stay here...               -->
+
 <head>
     <style>
         html {
