First implementation of enigma.js utility library

--- a/common/src/main/resources/assets/templates/list/index.html
+++ b/common/src/main/resources/assets/templates/list/index.html
@@ -13,6 +13,9 @@
     <meta name="keywords" content="quiz, ffs, random, dynamic, template">
     <meta name="description" content="Template extracted from the first epic quiz in project Enigma">
 
+    <!-- '_e' enigma.js helper library -->
+    <script src="cp:/assets/enigma.js"></script>
+
     <!-- Load page style and core script -->
     <link rel="stylesheet" href="cp:/assets/templates/list/style.css" />
     <script src="cp:/assets/templates/list/logic.js"></script>
