--- a/android-app/src/main/res/layout/main_card_large.xml
+++ b/android-app/src/main/res/layout/main_card_large.xml
@@ -35,6 +35,8 @@
                     a:layout_alignBottom="@id/card_image"
                     a:layout_margin="@dimen/card_content_padding"
                     a:textColor="#eee"
+                    a:maxLines="1"
+                    a:ellipsize="end"
                     app:font_family="RobotoSlab"
                     app:font_family_ext="Regular"
                     tools:text="Series L"/>
@@ -66,6 +68,8 @@
                     a:textSize="@dimen/body_font_size_large"
                     a:textStyle="bold"
                     a:layout_marginBottom="4dp"
+                    a:maxLines="2"
+                    a:ellipsize="end"
                     tools:text="What the hell?"/>
 
             <TextView
@@ -73,6 +77,8 @@
                     a:layout_width="wrap_content"
                     a:layout_height="wrap_content"
                     a:textSize="@dimen/body_font_size_small"
+                    a:maxLines="4"
+                    a:ellipsize="end"
                     tools:text="...and the computer caught up in fire in front of the paralyzed eyes of the team. 'I am fat and I have a llama' said Vik, while the other guys tried to extinguish the fire."/>
 
         </LinearLayout>
@@ -111,4 +117,3 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
